# YoYo

./: README.md  pyproject.toml  setup.cfg  sync.py
.github/workflows/: build.yaml
docs/: API.md
tests/: test_lite_cache.py  test_yoyo.py
yoyo/: __init__.py
