[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yoyo"
version = "1.0.1"
authors = [
    { name = "DNYFZR" },
]
readme = "README.md"
license = { file = "License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.12"

dependencies = [
    "duckdb>=1.2",
    "polars>=1.24",
    "pyarrow>=19.0",
]

[project.optional-dependencies]
dev = [
    "build",
]
tests = [
    "pytest",
]