[metadata]
name = lite_cache
version = attr: lite_cache.__version__
author = DNYFZR
description = Python package for managing a DuckDB cache 
license = LICENCE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.12
install_requires =
    polars>=0.20
    duckdb>=0.10
    pyarrow>=15.0

[options.packages.find]
include = lite_cache*
