[metadata]
name = yoyo
version = attr: yoyo.__version__
author = DNYFZR
description = For your yoyo data flow... 
long_description = file: README.md
keywords = cache, data, backup, export
license = LICENCE
classifiers =
    Development Status :: attr: yoyo.__status__
    Intended Audience :: developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    polars>=0.20
    duckdb>=0.10
    pyarrow>=15.0

[options.packages.find]
include = yoyo*
